# sightline

./: CMakeLists.txt  README.md  apply_gui_fixes5.ps1  build_local.ps1
assets/: README_FONTS.md
assets/fonts/: README.md
res/: ClientTube.manifest  ClientTube.rc  resources.rc
scripts/: fetch_imgui.sh
src/: main.cpp  resource.h  resources.rc
src/config/: Config.cpp  Config.h  PersistentData.h
src/extractor/: InnerTube.cpp  InnerTube.h  SigDecipher.h
src/player/: DShowPlayer.cpp  DShowPlayer.h  LavBootstrap.cpp  LavBootstrap.h  PlayerLauncher.cpp  PlayerLauncher.h  VLCPlayer.cpp  VLCPlayer.h  YoutubeStream.h
src/transcoder/: FfmpegBootstrap.h  FfmpegCapabilities.h  FfmpegRunner.h  GpuDetector.h  Transcoder.h
src/ui/: AppState.h  CTLogger.h  Icons.h  IconsFontAwesome6.h  MainWindow.cpp  MainWindow.h  PlayerView.cpp  PlayerView.h  SearchBar.cpp  SearchBar.h  Theme.h  ThumbnailCache.h  VideoList.cpp  VideoList.h  Widgets.h  stb_image_impl.cpp
src/ui/views/: DownloadDialog.h  ViewChannel.h  ViewMain.h  ViewSearch.h  ViewSettings.h  ViewVideoDetail.h
tools/: apply_gui_fixes5.ps1
